[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Art/WhackATako/HoleMask.png" type="Texture" id=1]
[ext_resource path="res://Assets/Art/WhackATako/Hole.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Tako/TakoSprite.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Minigames/WhackTako/TakoHole.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Tako/Emotes.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=6]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("TakoSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TakoSprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "down"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("TakoSprite:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -200 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TakoSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 7, 9 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("TakoSprite:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -200 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TakoSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 9, 15, 10 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 123.528, 55.4279 )

[node name="TakoWhack" type="Node2D"]
script = ExtResource( 4 )

[node name="Hole" type="Sprite" parent="."]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -1, -1 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )
mode = 3
range_item_cull_mask = 2

[node name="TakoSprite" parent="." instance=ExtResource( 3 )]
light_mask = 2
position = Vector2( 1, 57.2878 )
scale = Vector2( 0.7, 0.7 )
offset = Vector2( 0, -200 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 6 )
anims/down = SubResource( 4 )
anims/pop = SubResource( 2 )

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2( 5.96046e-08, 7.62939e-06 )
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -126.103 )
shape = SubResource( 5 )

[node name="Emotes" parent="." instance=ExtResource( 5 )]
light_mask = -2147483647
position = Vector2( 0, -213.714 )
z_index = 10
offset = Vector2( 0, -17.0189 )
frame = 25

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
